Added 2 player feature

--- a/index.html
+++ b/index.html
@@ -11,10 +11,13 @@
 	<div class="menu">
 		<p class="snakeTitle">SNAKE</p>
 		<button class="button_play">PLAY</button>
+		<button class="onePlayer">1P</button>
+		<button class="twoPlayer">2P</button>
 	</div>
 	<div class="gameOverMenu">
 		<p class="gameOverText">GAME OVER</p>
-		<!--<p class="gameOverPoints">points: </p>-->
+		<p class="gameOverPoints1">points: </p>
+		<p class="gameOverPoints2">points: </p>
 		<button class="button_tryagain">TRY AGAIN</button>
 	</div>
 	<canvas class="canvas" width="800" height="832">POINTS</canvas>
